Made classes with private constructors final. Small code cleanup.